--- a/技巧公式.md
+++ b/技巧公式.md
@@ -14,7 +14,7 @@
 
 ## 零、写在前面
 
-* 如无特殊说明，c表示任意常数。
+- 如无特殊说明，c表示任意常数。
 
 ## 一、课外
 
@@ -22,28 +22,26 @@
 
 ### 2.1 有理函数求极限
 
-* $\lim\limits_{n \rightarrow ∞} \frac{a_0 x^m + a_1 x^{m-1}...+a_m}{b_0 x^n + b_1 x^{n-1}...+b_n} = \begin{cases} \frac{a_0}{b_0} & m=n \\ 0 & m<n \\ ∞ & m>n\end{cases}$
+- $\lim\limits_{n \rightarrow ∞} \frac{a_0 x^m + a_1 x^{m-1}...+a_m}{b_0 x^n + b_1 x^{n-1}...+b_n} = \begin{cases} \frac{a_0}{b_0} & m=n \\ 0 & m<n \\ ∞ & m>n\end{cases}$
 
 ### 2.2 无穷小表述
 
-* A是B的 $\begin{cases}高阶 \\ 同阶 \\ 等价 \\低阶 \end{cases}$无穷小 => $\lim\limits_{x \rightarrow 0} \frac{A}{B}= \begin{cases}0 \\ c \\ 1 \\∞ \end{cases}$ 
-
-* A是B的k阶无穷小 => $\lim\limits_{x \rightarrow 0} \frac{A}{B^k}=c \not= 0 (k > 0)$ 
+- A是B的 $\begin{cases}高阶 \\ 同阶 \\ 等价 \\ 低阶 \end{cases}$无穷小 => $\lim\limits_{x \rightarrow 0} \frac{A}{B}= \begin{cases}0 \\ c \\ 1 \\ ∞ \end{cases}$ 
+- A是B的k阶无穷小 => $\lim\limits_{x \rightarrow 0} \frac{A}{B^k}=c \not= 0 (k > 0)$ 
 
 ### 2.3 等价无穷小公式
 
-* $sinx / tanx / arcsinx / arctanx $ ~ $x$ 
-*  $\ln(x+1)$ ~ $x$ // $\log_a (x+1)$ ~ $\frac{x}{\ln a}$
-* $e^x -1$ ~ $x$ // $a^x - 1$ ~ $x \ln a$
-* 
+- $sinx / tanx / arcsinx / arctanx $ ~ $x$ 
+-  $\ln(x+1)$ ~ $x$ // $\log_a (x+1)$ ~ $\frac{x}{\ln a}$
+- $e^x -1$ ~ $x$ // $a^x - 1$ ~ $x \ln a$
+- 
 
 ## 三、一元函数微积分
 
 ### 3.1 有关 $e^x$ 的积分
 
-* $∫x^n e^x dx = e^x [x^n - nx^{n-1} + n(n-1)x^{(n-2)}...] = e^x \sum_{i=0}^{∞} [(-1)^n (x^n)^{(n)}]$ ，即对$x^n e^x$求积分的结果为$e^x$ 乘以$x^n$ 依次求导的和，其正负号交替。推广到一般式如下：
-
-* $∫f(x) e^{kx} dx = e^{kx} [\frac{f(x)}{k} - \frac{f'(x)}{k^2} + \frac{f^2 (x)}{k^3}...] = e^{kx} \sum_{i=0}^{∞} [\frac{(-1)^n f^{(i)}(x)}{k^{i+1}}]$
+- $∫x^n e^x dx = e^x [x^n - nx^{n-1} + n(n-1)x^{(n-2)}...] = e^x \sum_{i=0}^{∞} [(-1)^n (x^n)^{(n)}]$ ，即对$x^n e^x$求积分的结果为$e^x$ 乘以$x^n$ 依次求导的和，其正负号交替。推广到一般式如下：
+- $∫f(x) e^{kx} dx = e^{kx} [\frac{f(x)}{k} - \frac{f'(x)}{k^2} + \frac{f^2 (x)}{k^3}...] = e^{kx} \sum_{i=0}^{∞} [\frac{(-1)^n f^{(i)}(x)}{k^{i+1}}]$
 
 
 
